--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <html>
   <head>
      <title> Dune is coming </title>
+     <style>
+       body {
+         background-color: black;
+         text-align: center;
+         padding 200px;
+       }
+       h1 {
+         font-size: 60px;
+         colour: #eeeee33;
+       }
+     </style>
   </head>
   <body>
     <h1> Dune is coming </h1>
