--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
        body {
          background-color: black;
          text-align: center;
-         padding 200px;
+         padding: 200px;
        }
        h1 {
          font-size: 60px;
-         colour: #eeeee33;
+         color: #eeeee33;
        }
      </style>
   </head>
